# hw_python_web_ten

./: README.md  pyproject.toml
hw_app/hw_ten_app/: views.py
hw_app/hw_ten_app/templates/hw_ten_app/: base.html
hw_app/users/: urls.py  views.py
hw_app/users/templates/users/: login.html  register.html
